--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "esnext": "dist/esm/index.mjs",
   "scripts": {
     "build": "rollup -c",
-    "test": "jest"
+    "test": "jest --runInBand"
   },
   "devDependencies": {
     "@rollup/plugin-terser": "^0.4.1",
@@ -23,6 +23,7 @@
     "jest": "^29.5.0",
     "rollup": "^3.20.2",
     "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.1",
     "tslib": "^2.5.0",
     "typescript": "^5.0.4"
   }
