--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,8 @@
         "outDir": "dist",
         "module": "ES2015",
         "moduleResolution": "node",
+        
+        "skipLibCheck": true
     },
     "exclude": [
         "dist",
