--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,7 @@
 {
+    "files": [
+        "src/index.ts"
+    ],
     "compilerOptions": {
         "target": "ES2015",
         "lib": [
@@ -12,7 +15,6 @@
         "outDir": "dist",
         "module": "ES2015",
         "moduleResolution": "node",
-        
         "skipLibCheck": true
     },
     "exclude": [
